[gd_scene load_steps=5 format=2]

[ext_resource path="res://Launcher/Assets/raketenwerfer.png" type="Texture" id=1]
[ext_resource path="res://Launcher/Launcher_scene.gd" type="Script" id=2]
[ext_resource path="res://Banana/Banana_Scene.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48.7912, 7.93359 )

[node name="Launcher_scene" type="KinematicBody2D"]
light_mask = 2
position = Vector2( 200, 200 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )
banana_scene = ExtResource( 3 )
banana_spawn_path = NodePath("Banana_Spawn")

[node name="Launcher" type="Sprite" parent="."]
show_behind_parent = true
light_mask = 2
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
light_mask = 2
shape = SubResource( 1 )

[node name="Banana_Spawn" type="Position2D" parent="."]
position = Vector2( 55, -3 )

[node name="Label_angle" type="Label" parent="."]
visible = false
margin_left = 174.879
margin_top = -67.3477
margin_right = 431.879
margin_bottom = -53.3477
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_puissance" type="Label" parent="."]
visible = false
margin_left = 168.0
margin_top = 48.0
margin_right = 208.0
margin_bottom = 62.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_vitesse_vent" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_direction_vent" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}
